# Cpp_Mini_project

./: README.md
.github/workflows/: build_make.yml  c-build.yml  cppcheck.yml  unit_test.yml  unittest.yml  valgrind.yml
1_Requirements/: Requirements.docx
2_Architecture/SongStoreSourceTrail/: SongStoreSourceTrail.srctrlprj
3_Implementation/: Makefile  SongStore.depend  main.cpp  song-test.cpp  song.cpp  song.h  songDb-test.cpp  songDb.cpp  songDb.h  songGenre.cpp
4_TestPlanAndOutput/: ShellScript.sh  TestPlan.docx
4_TestPlanAndOutput/Cpp_Mini_project/SongStore/: song-test.cpp  song.cpp  songDb-test.cpp  songDb.cpp  songGenre.cpp  songGenre.h
Song/: Song.cbp  Song.layout  oldSong.h  song.cpp  song.h
SongStore/: CMakeCache.txt  CMakeLists.txt  Makefile  SongStore.cbp  SongStore.depend  cmake_install.cmake  main.cpp  song-test.cpp  song.cpp  songDb-test.cpp  songDb.cpp  songGenre.cpp
project/: main.cpp  project.depend  project.layout
sample/: Song.cpp  Song.h  main.cpp  main.h  new.cpp  new.h  old.cpp  old.h  sample.cbp  sample.depend  sample.layout
